MKTG-1718-added css to fix the spacing issue.

--- a/css/05-scroll-menu.less
+++ b/css/05-scroll-menu.less
@@ -29,9 +29,9 @@
           color: @mulesoft-links-unselected;
           text-decoration: none;
           border-left: 5px solid @mulesoft-light-grey;
-          padding: 10px 20px;
+          padding: 5px 20px;
           padding-right: 0;
-          font-size: 13px;
+          font-size: 12px;
           &.active {
             border-left: 5px solid @mulesoft-light-blue;
           }
